src/objects/Pipeline_Snapshot_EV_DIff__c.object
<CustomObject>
    <fields>
        <fullName>DIFF_12_Month_Cash_Minus_Expense_Income__c</fullName>
        <description>EV DIFF - 12 Month Cash Minus Expense Income (EV)</description>
        <label>DIFF-12 Month Cash Minus Expense Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DIFF_18_Month_Cash_Minus_Expenses_Income__c</fullName>
        <description>EV DIFF - 18 Month Cash Minus Expenses Income (EV)</description>
        <label>DIFF-18 Month Cash Minus Expenses Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DIFF_24_Month_Cash_Minus_Expense_Income__c</fullName>
        <description>EV DIFF - 24 Month Cash Minus Expense Income (EV)</description>
        <label>DIFF-24 Month Cash Minus Expense Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DIFF_Amount_Minus_Expense_Income__c</fullName>
        <description>EV DIFF - Opportunity Amount Minus Expense Income</description>
        <label>DIFF-Amount Minus Expense Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DIFF_Expected_Value_Minus_Expense__c</fullName>
        <description>EV DIFF - Expected Value Minus Expense</description>
        <label>DIFF-Expected Value Minus Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delta_Type__c</fullName>
        <label>Delta Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Opp EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decreased EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Opp - Lost / No Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Opp - Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_Date__c</fullName>
        <label>Month_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Pipeline Snapshot EV DIff</label>
    <nameField>
        <label>Pipeline Snapshot EV DIff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Snapshot EV DIffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>